[package]
name = "os"
version = "0.1.0"
authors = ["liqcomb <liqcomb@non-exist.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
linked_list_allocator = { git = "https://github.com/phil-opp/linked-list-allocator" } 
spin = "*"
rlibc = "*"
num = { version = "*", default-features = false }

[profile.release]
panic = "abort"
opt-level = 2
